--- a/templates/index.html
+++ b/templates/index.html
@@ -256,7 +256,7 @@
     
     <footer>
         <div class="container">
-            <p>جميع الحقوق محفوظة &copy; 2025 - منيرة العيسى</p>
+                   <p> 2025 &copy; جميع الحقوق محفوظة لمنيرة العيسى </p>
         </div>
     </footer>
 </body>
